@@ -6,7 +6,7 @@ BEGIN {
 	$^W = 1;
 }
 
-use Test::More tests => 10;
+use Test::More tests => 11;
 use File::Spec;
 use t::lib::Test;
 require ExtUtils::MakeMaker;
@@ -25,7 +25,17 @@ sub _read {
 
 # Regular build
 SCOPE: {
-	ok( create_dist('Foo'), 'create_dist' );
+	#ok( create_dist('Foo'), 'create_dist' );
+        ok( create_dist( 'Foo', { 'Makefile.PL' => <<"END_DSL" }), 'create_dist' );
+use inc::Module::Install 0.81;
+name          'Foo';
+license       'perl';
+perl_version  '5.005';
+requires_from 'lib/Foo.pm';
+requires      'File::Spec' => '0.79';
+WriteAll;
+END_DSL
+
 	ok( run_makefile_pl('Foo',(run_params=>['PREREQ_PRINT >test'])),  'build_dist'  );
 	my $file=File::Spec->catfile(qw(t Foo test));
 	ok( -f $file);
@@ -39,9 +49,11 @@ SCOPE: {
 	if ( eval($ExtUtils::MakeMaker::VERSION) < 6.55_03 ) {
 		ok( exists $PREREQ_PM->{'ExtUtils::MakeMaker'});
 		ok( !exists $BUILD_REQUIRES->{'ExtUtils::MakeMaker'});
+		ok (1);
 	} else { #best to check both because user can have any version
 		ok( exists $BUILD_REQUIRES->{'ExtUtils::MakeMaker'});
 		ok( !exists $PREREQ_PM->{'ExtUtils::MakeMaker'});
+		is( $MIN_PERL_VERSION, '5.005' , 'correct Perl version');
 	}
 	ok( kill_dist('Foo'),   'kill_dist'   );
 }
